fix statusbar overlapping navbar on clean themes

--- a/src/freenet/clients/http/staticfiles/themes/clean/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/clean/theme.css
@@ -90,7 +90,7 @@ div#navbar {
 	margin: 5px;
 	padding: 0;
 	margin-left: 0;
-	padding-bottom: 5px;
+	padding-bottom: 4em;
 	margin-top: 0;
 }
 
